@@ -49,7 +49,7 @@ public class CustomEmoji extends Emoji {
 
 		this.component = Component.text().content(character)
 				.hoverEvent(Component.text()
-									.content(character + " " + names.get(0))
+									.content(character + " " + names.getFirst())
 									.append(Component.newline())
 									.append(Component.text(category,
 														   Style.style().color(NamedTextColor.BLUE).build())
